[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torbot"
version = "4.1.0"
authors = [
    { name="Akeem King", email="akeemtlking@gmail.com" },
    { name="PS Narayanan", email="thepsnarayanan@gmail.com" },
]
description = "TorBot is an OSINT tool for the dark web."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "altgraph==0.17.2",
  "beautifulsoup4==4.11.1",
  "certifi==2023.7.22",
  "charset-normalizer==2.0.12",
  "decorator==5.1.1",
  "idna==3.3",
  "igraph==0.10.6",
  "joblib==1.2.0",
  "macholib==1.16",
  "progress==1.6",
  "pyinstaller==5.13.1",
  "pyinstaller-hooks-contrib==2022.7",
  "PySocks==1.7.1",
  "python-dotenv==0.20.0",
  "scikit-learn==1.3.0",
  "scipy==1.10.0",
  "six==1.16.0",
  "sklearn==0.0",
  "soupsieve==2.3.2.post1",
  "termcolor==1.1.0",
  "texttable==1.6.4",
  "threadpoolctl==3.1.0",
  "urllib3==1.26.19",
  "validators==0.20.0",
  "treelib==1.6.1",
  "numpy==1.24.4",
  "unipath==1.1",
  "httpx[socks]==0.25.0",
  "tabulate==0.9.0",
  "phonenumbers==8.13.22",
  "pytest==7.4.2",
  "yattag==1.15.1",
  "toml==0.10.2",
]
