[tool.poetry]
name = "TorBot API"
version = "1.3.0"
description = ""
authors = ["DedSecInside"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
PySocks = "^1.7.1"
requests = "^2.25.1"
ete3 = "^3.1.2"
six = "^1.15.0"
numpy = "^1.20.2"
beautifulsoup4 = "^4.9.3"
requests-mock = "^1.8.0"
pyinstaller = "^4.2"
PyQt5 = "^5.15.4"
termcolor = "^1.1.0"
python-dotenv = "^0.17.0"
threadsafe = "^1.0.0"
validators = "^0.18.2"
yattag = "^1.14.0"
progress = "^1.5"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
